crates/test-files/fixtures/compile_errors/const_local.fe
contract Foo {
    fn not_a_constant() {
        const FOO: (i32, i32) = (1, 2)
    }

    fn not_a_constant2() {
        let foo: i32 = 1
        const FOO: i32 = foo + 1
    }

    fn overflow() {
        const FOO1: u8 = 255
        const FOO2: u8 = 1
        const FOO3: u8 = FOO1 + FOO2
    }

    fn undefined() {
        const FOO: u8 = BAR
    }

    fn type_error() {
        const FOO: i32 = "FOO"
    }
}
